--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@emotion/css": "^11.9.0",
     "next": "12.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
@@ -20,6 +21,7 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.2",
+    "reflect-metadata": "^0.1.13",
     "typescript": "4.6.3"
   }
 }
